--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,41 @@ nav>a{
     height: inherit;
     background:#FCD7AD;
 }
+.content2{
+    display: flex;
+    justify-content: space-around;
+    height: inherit;
+    background:#FCD7AD;
+}
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    margin-left: 10px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  #radio{
+    margin-right: 20px;
+  }
+  .submit{
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    background-color: #008CBA;
+  }
+  .contact{
+      margin: 60px;
+  }
 .description{
     width:55vw;
     background: #F6C28B;
