--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,19 @@ input[type=text], select {
     cursor: pointer;
     background-color: #008CBA;
   }
+  .song button{
+    background-color: #9da59d; /* Green */
+    border: none;
+    color: white;
+    padding: 7px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    background-color: #031a22;
+  }
   .contact{
       margin: 60px;
   }
@@ -73,6 +86,7 @@ input[type=text], select {
     background: #F6C28B;
     margin-bottom: 10vmin;
     overflow-y: scroll;
+    height: 60vh;
 }
 .small {
     max-height: 400px;
