--- a/styles/style.css
+++ b/styles/style.css
@@ -156,7 +156,27 @@ footer{
 .logo{
     font-size:2em;
 }
-
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #bb7838; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #A57548; 
+  }
 
 
 @media screen and (max-width: 640px) {
