--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
     margin: 0;
     padding: 0;
     font-family: 'Quicksand', sans-serif;
-
 }
 
 body {
@@ -18,21 +17,7 @@ body {
 
 }
 
-nav {
-    display: flex;
-    background: #ffe4c6;
-    padding: 2vmin;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-nav>img{
-    width: 7vmin;
-}
-nav>a {
-    color: #865e31;
-    font-size: 2em;
-}
+
 
 .content {
     display: flex;
@@ -150,24 +135,14 @@ select {
     box-shadow: 0px 10px 20px -11px #A57548;
 }
 
-.pagesL li {
-    display: inline;
-}
+
 
 a {
     text-decoration: none;
-    color: white;
+    color: gray;
 }
 
-.pagesL a {
-    padding: 1vmin;
-    background-color: #865e31;
-    border-radius: .5vmin;
-}
 
-.pagesL a:hover {
-    background: #aa7539;
-}
 
 footer {
     background: #A57548;
@@ -195,10 +170,7 @@ footer {
     border-radius: 10px;
     z-index: 1;
 }
-.selected {
-    background-color: #e68c38;
-    color: #2e1a07;
-}
+
 
 .song {
     margin-bottom: 1vmin;
