--- a/css/nav.css
+++ b/css/nav.css
@@ -1,10 +1,17 @@
+.selected {
+    color: #2e1a07;
+    border-bottom:2px solid black;
+    border-radius: 2px;
+}
+.selected a{
+    color: #2e1a07;
+}
 nav *{
     box-sizing: border-box;
 }
 nav{
     display: flex;
     justify-content: space-between;
-    align-items: center;
     background-color:#ffc37e ;
 }
 nav .logo > img{
@@ -16,32 +23,66 @@ nav .logo a{
 }
 nav li{
     list-style: none;
-    display: inline-block;
-    padding:  0 1vmin;
+    display: inline-flex;
+    align-items: center;
     margin: 0px;
     height: 100%;
 
 }
-.selected {
-    color: #2e1a07;
-    border-bottom:2px solid black;
-    border-radius: 2px;
-}
+
 nav li a {
-    color:white;
-    position: relative;
+    color: white;
+    display: flex;
+    align-items: center;
     margin: 0;
-    top:30%;
-}
-nav ul{
-    margin-right: 10vmin;
     height: 100%;
-    letter-spacing: 0px;
+    padding: 0 1vmin;
 }
-nav ul:nth-child(odd){
-    background:red;
+nav>ul{
+    margin-right: 10vmin;
+    display: flex;
+    align-items: center;
 }
+
 nav .logo{
     display: flex;
     align-items: center;
 }
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #e98f29;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #ffc89b;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right:0px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
